Updating resume with recent experience

--- a/resume.html
+++ b/resume.html
@@ -335,25 +335,42 @@ $(document).ready(function () {
 <p>PDF version available <a href="./Kathleen_Hablutzel_Resume.pdf">here</a>.</p>
 <p><br></p>
 <p><br></p>
-<div id="skills-interests" class="section level2">
-<h2>Skills &amp; Interests</h2>
-<p><strong>Programming:</strong> Python, R, Java, SQL, JavaScript, MATLAB</p>
-<p><strong>Tools:</strong> Git/GitHub, HTML5/CSS, Tableau, Gephi, ArcGIS, LaTeX, Adobe InDesign</p>
+<div id="skills-certifications" class="section level2">
+<h2>Skills &amp; Certifications</h2>
+<p><strong>Languages:</strong> Python, JavaScript, R, Java, SQL</p>
+<p><strong>Tools/Skills:</strong> Angular, Git/GitHub, Agile Development, HTML5/CSS, Tableau, Gephi, ArcGIS, LaTeX, Adobe InDesign</p>
+<p><strong>Bank of America Tech University Badges:</strong> Python, Artificial Intelligence, Data Management Fundamentals</p>
 <p><br></p>
 <p><br></p>
 </div>
 <div id="experience" class="section level2">
 <h2>Experience</h2>
 <p><br></p>
+<div id="global-technology-sophomore-summer-analyst" class="section level3">
+<h3>Global Technology Sophomore Summer Analyst</h3>
+<div id="bank-of-america-corporate-treasury-data-horizontal-team" class="section level4">
+<h4>Bank of America, Corporate Treasury Data Horizontal Team</h4>
+<div id="june-aug.-2021-charlotte-nc" class="section level5">
+<h5><em>June – Aug. 2021</em>, Charlotte, NC</h5>
+<ul>
+<li>Automated joins and transformations of data tables in the Corporate Treasury data pipeline using Pandas DataFrames in Python</li>
+<li>Translated Oracle SQL data mappings into Python API to replace existing third-party data management software handling data integration for Bank of America’s three corporate lines of business</li>
+</ul>
+<p><br></p>
+</div>
+</div>
+</div>
 <div id="software-engineering-research-assistant" class="section level3">
 <h3>Software Engineering Research Assistant</h3>
-<div id="stride-research-program" class="section level4">
-<h4>STRIDE Research Program</h4>
+<div id="smith-college-stride-research-program" class="section level4">
+<h4>Smith College, STRIDE Research Program</h4>
 <div id="sept.-2020-present-northampton-ma" class="section level5">
 <h5><em>Sept. 2020 – Present</em>, Northampton, MA</h5>
 <ul>
-<li>Refactor model management features in web-based requirements engineering goal modeling tool, <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>, using Java, JavaScript, JQuery, JSON, and HTML/CSS</li>
-<li>Internship in the Grubb Software Engineering Lab</li>
+<li>Drive implementation of automatic goal model merging in web-based requirements engineering goal modeling tool, <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a></li>
+<li>Foster Agile development practices employing Jira boards and weekly sprint planning meetings</li>
+<li>Refactored frontend model management features using JavaScript, JQuery, JSON, and HTML/CSS</li>
+<li>Research Assistantship in the Grubb Software Engineering Lab</li>
 </ul>
 <p><br></p>
 </div>
@@ -361,12 +378,16 @@ $(document).ready(function () {
 </div>
 <div id="algorithms-teaching-assistant" class="section level3">
 <h3>Algorithms Teaching Assistant</h3>
+<div id="smith-college" class="section level4">
+<h4>Smith College</h4>
 <div id="feb.-2021-present-northampton-ma" class="section level5">
 <h5><em>Feb. 2021 — Present</em>, Northampton, MA</h5>
 <ul>
 <li>Tutor students in theory and implementation of common algorithms and algorithmic design techniques</li>
+<li>Selected as the first TA for Smith’s new Applied Algorithms course in Spring 2021</li>
 </ul>
 <p><br></p>
+</div>
 </div>
 </div>
 <div id="data-fellow-cynthia-wallace-for-congress" class="section level3">
@@ -386,8 +407,8 @@ $(document).ready(function () {
 </div>
 <div id="data-science-policy-research-assistant" class="section level3">
 <h3>Data Science Policy Research Assistant</h3>
-<div id="stride-research-program-1" class="section level4">
-<h4>STRIDE Research Program</h4>
+<div id="smith-college-stride-research-program-1" class="section level4">
+<h4>Smith College, STRIDE Research Program</h4>
 <div id="sept.-2019-sept.-2020-northampton-ma" class="section level5">
 <h5><em>Sept. 2019 – Sept. 2020</em>, Northampton, MA</h5>
 <ul>
@@ -403,15 +424,28 @@ $(document).ready(function () {
 <div id="summer-research-innovation-program" class="section level4">
 <h4>Summer Research &amp; Innovation Program</h4>
 </div>
-<div id="north-carolina-school-of-science-and-mathematics" class="section level4">
-<h4>North Carolina School of Science and Mathematics</h4>
-<div id="june-aug.-2018-2019-2020-durham-nc-north-carolina-school-of-science-and-mathematics" class="section level5">
-<h5><em>June – Aug. 2018, 2019, 2020</em>, Durham, NC (North Carolina School of Science and Mathematics)</h5>
+<div id="north-carolina-school-of-science-and-mathematics-ncssm" class="section level4">
+<h4>North Carolina School of Science and Mathematics (NCSSM)</h4>
+<div id="june-aug.-2019-2020-durham-nc" class="section level5">
+<h5><em>June – Aug. 2019, 2020</em>, Durham, NC</h5>
 <ul>
 <li>Developed repeatable curriculum for an R Data Science Bootcamp, including data visualization and data wrangling</li>
 <li>Led redesign of the website architecture of the Research &amp; Innovation Google Site</li>
 <li>Built Python script to format 153 student projects into HTML5 website backbone for student research showcase</li>
-<li>As program participant in 2018, implemented optimization algorithms in MATLAB and built edge detection programs in Python with OpenCV through an internship at the Duke University Zavlanos robotics laboratory</li>
+</ul>
+<p><br></p>
+</div>
+</div>
+</div>
+<div id="intern-zavlanos-robotics-laboratory" class="section level3">
+<h3>Intern, Zavlanos Robotics Laboratory</h3>
+<div id="duke-university-ncssm-research-in-computational-sciences-program" class="section level4">
+<h4>Duke University + NCSSM Research in Computational Sciences Program</h4>
+<div id="june-aug.-2018-durham-nc" class="section level5">
+<h5><em>June – Aug. 2018</em>, Durham, NC</h5>
+<ul>
+<li>Implemented gradient descent optimization algorithms in MATLAB for sparse complex matricies</li>
+<li>Built edge detection programs in Python with OpenCV</li>
 </ul>
 <p><br></p>
 <p><br></p>
@@ -430,7 +464,7 @@ $(document).ready(function () {
 <li>4.0/4.0 GPA</li>
 <li><strong>Zollman Scholarship:</strong> Smith’s highest academic scholarship, awarded to fewer than 10 entering first-year students</li>
 <li><strong>STRIDE Research Program:</strong> Selective paid research assistant program, investigating data science policy</li>
-<li><strong>Relevant Coursework:</strong> Algorithms, Machine Learning, Introduction to Data Science, Data Structures, Theory of Computation, Communicating with Data, Digital History, Research Design and Analysis, Multiple Regression, Linear Algebra</li>
+<li><strong>Relevant Coursework:</strong> Algorithms, Machine Learning, Network Security, Communicating with Data, Data Structures, Intro Data Science, Linear Algebra, Multiple Regression, Research Design &amp; Analysis, Theory of Computation</li>
 </ul>
 <p><br></p>
 </div>
@@ -450,6 +484,7 @@ $(document).ready(function () {
 <div id="awards" class="section level2">
 <h2>Awards</h2>
 <ul>
+<li><strong>Best in Design</strong>, HackSmith 2021 for the <a href="https://krhablutzel.github.io/KnittingPatternGenerator/">Unconventional Knitting Pattern Generator</a></li>
 <li><strong>Honorable Mention</strong>, <a href="https://www.causeweb.org/usproc/usclap/2020/fall/winners">2020 Fall Undergraduate Statistics Class Project Competition</a>, Intermediate Statistics</li>
 <li>Arthur Ellis Hamm Prize <strong>Winner</strong></li>
 <li>Smith College <strong>Dean’s List</strong> 2019-2020</li>
@@ -461,8 +496,11 @@ $(document).ready(function () {
 </div>
 <div id="activities-leadership" class="section level2">
 <h2>Activities &amp; Leadership</h2>
-<p><strong>Smithies in Statistical and Data Sciences Treasurer:</strong> Manage funds and organize department student/faculty lunches</p>
-<p><strong>Student Academic Advisor:</strong> Advise 53 peers on academic success and course registration</p>
+<p><strong>Smith Computer Science Department Liaison:</strong> Runs weekly CS community programming including interview prep, mini hackathons, and financial literacy sessions. Communicates opportunities to the Smith CS community. Represents and advocates for CS student interests at CS faculty meetings.</p>
+<p><strong>Haven-Wesley House Council:</strong> Coordinates house community-building activities as the junior class representative in my residential community at Smith College.</p>
+<p><strong>Workday User Acceptance Testing (UAT) Assistant:</strong> Evaluated Workday Student system rollout from user perspective and suggested critical design considerations</p>
+<p><strong>The Amplifier Project Web Developer:</strong> Built the virtual stage for Smith College Theater’s Fall 2020 production</p>
+<p><strong>Smithies in Statistical and Data Sciences Treasurer:</strong> Managed funds and organized department student/faculty lunches</p>
 <p><strong>Props Internship:</strong> Led props design and construction for multiple Smith College theatrical productions</p>
 <p><strong>Reacting to the Past:</strong> Negotiated support for historical legislation via debate and persuasive public speaking</p>
 <p><strong>Publication Editor-in-Chief, Broad Street Scientific &amp; Fifth World:</strong> Managed publication of 2 student research journals from concept to final production</p>
@@ -472,7 +510,7 @@ $(document).ready(function () {
 </div>
 <div id="other-interests" class="section level2">
 <h2>Other Interests</h2>
-<p>16th Century British Politics, Cryptography, Theater</p>
+<p>Cryptography, Running, Knitting, Theater, 16<sup>th</sup> Century British Politics</p>
 </div>
 
 <div id="footer">
