Update class year after acceleration.

--- a/contact.html
+++ b/contact.html
@@ -283,10 +283,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="contact.html">Contact</a>
-</li>
-<li>
-  <a href="resume.html">Resume</a>
+  <a href="./Kathleen_Hablutzel_Resume.pdf">Resume</a>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -296,13 +293,19 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
+    </li>
+    <li>
+      <a href="https://github.com/lgroves29/NetSecPortScanner">Port Scanner</a>
+    </li>
+    <li>
+      <a href="https://github.com/krhablutzel/codon-usage-bias">Bioinformatics ML Project</a>
+    </li>
+    <li>
       <a href="https://krhablutzel.github.io/KnittingPatternGenerator/">Unconventional Knitting Project Generator</a>
     </li>
     <li>
       <a href="https://github.com/comp-machine-learning-spring2021/portfolio-krhablutzel">Machine Learning Portfolio</a>
-    </li>
-    <li>
-      <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
     </li>
     <li>
       <a href="https://sophia.smith.edu/theamplifier/enter/">The Amplifier Project</a>
@@ -312,6 +315,21 @@ $(document).ready(function () {
     </li>
     <li>
       <a href="https://krhablutzel.github.io/srip-bootcamp/">R Data Science Bootcamp</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Contact
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="https://github.com/krhablutzel/">GitHub</a>
+    </li>
+    <li>
+      <a href="https://www.linkedin.com/in/kathleen-hablutzel/">LinkedIn</a>
     </li>
   </ul>
 </li>
