--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.utf8</title>
+<title>Kathleen’s Website</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -283,10 +283,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="contact.html">Contact</a>
-</li>
-<li>
-  <a href="resume.html">Resume</a>
+  <a href="./Kathleen_Hablutzel_Resume.pdf">Resume</a>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -296,13 +293,19 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
+    </li>
+    <li>
+      <a href="https://github.com/lgroves29/NetSecPortScanner">Port Scanner</a>
+    </li>
+    <li>
+      <a href="https://github.com/krhablutzel/codon-usage-bias">Bioinformatics ML Project</a>
+    </li>
+    <li>
       <a href="https://krhablutzel.github.io/KnittingPatternGenerator/">Unconventional Knitting Project Generator</a>
     </li>
     <li>
       <a href="https://github.com/comp-machine-learning-spring2021/portfolio-krhablutzel">Machine Learning Portfolio</a>
-    </li>
-    <li>
-      <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
     </li>
     <li>
       <a href="https://sophia.smith.edu/theamplifier/enter/">The Amplifier Project</a>
@@ -312,6 +315,21 @@ $(document).ready(function () {
     </li>
     <li>
       <a href="https://krhablutzel.github.io/srip-bootcamp/">R Data Science Bootcamp</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Contact
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="https://github.com/krhablutzel/">GitHub</a>
+    </li>
+    <li>
+      <a href="https://www.linkedin.com/in/kathleen-hablutzel/">LinkedIn</a>
     </li>
   </ul>
 </li>
@@ -327,13 +345,16 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Kathleen’s Website</h1>
 
 </div>
 
 
 <p><br></p>
 <p><img src="images/headshot-Dec-2020.jpg" align="left" height="250px" width="250px" hspace="20" /></p>
-<p>Hello! I’m Kathleen Hablutzel and I’m a double major in Computer Science &amp; Statistical and Data Sciences at Smith College (graduating May 2023). I especially enjoy cryptography, machine learning, data wrangling, and networks. I’m a software engineering intern in Smith’s Grubb Lab, where I contribute to <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>, a web-based tool for goal-oriented requirements engineering, and I TA for Smith’s Algorithms and Applied Algorithms courses. Over the summer of 2021, I was a data engineer for Bank of America’s Corporate Treasury data warehouses through the Global Technology Sophomore Summer Analyst Program. I look forward to returning to Bank of America in summer 2022 in the Global Information Security division! In the past, I’ve also volunteered as a data scientist for a Congressional campaign (Cynthia Wallace in 2020) and built an <a href="srip-bootcamp/">introductory data science course</a> for high school students at my alma mater, the North Carolina School of Science and Mathematics (go Unicorns!).</p>
+<p>Hello! I’m Kathleen Hablutzel and I’m a double major in Computer Science &amp; Statistical and Data Sciences at Smith College, graduating January 2023 (accelerated by one semester). I especially enjoy cybersecurity, cryptography, machine learning, and data wrangling.</p>
+<p>At Smith, I’m a software engineering intern in Prof. Alicia M. Grubb’s lab, where I contribute to <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>, a web-based tool for goal-oriented requirements engineering. I’m also a student pedagogical partner for CSC294 Computational Machine Learning, focused on redesigning the decision tree and random forest classifier labs. I have also been a TA for Smith’s Algorithms and Applied Algorithms courses, and worked on numerous projects available under the Projects tab.</p>
+<p>Over the summer of 2021, I worked as a data engineer for Bank of America’s Corporate Treasury data warehouses through the Global Technology Sophomore Summer Analyst Program. I look forward to returning to Bank of America in summer 2022 in the Global Information Security division!</p>
 <p>When I’m not coding or nerding out over cool graphs, I enjoy running, knitting, building props and sets with the Smith College Theater Department, coding cryptographic ciphers, and exploring 16<sup>th</sup> century British politics.</p>
 
 <div id="footer">
